# mcp-spacex-server

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
src/: registry.py  schemas.py  spacex_client.py
src/testing/: test_rocket.py
src/tools/: __init__.py  latest_launch_tool.py  launch_by_id_tool.py  launch_tool.py  rocket_list_tool.py  rocket_tool.py  schemas.py
tests/: test_latest_launch_tool.py  test_launch_by_id_tool.py  test_registry.py
