[project]
name = "mcp-spacex-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.7",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# Не ігноруємо E501, щоб Ruff контролював довжину рядка = 100.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
